fix size and overflow on preview

--- a/src/scss/layout/_main1.scss
+++ b/src/scss/layout/_main1.scss
@@ -35,6 +35,9 @@
     &__text {
       background-color: $white;
       padding: 20px 20px 10px 0;
+      min-width: 240px;
+      max-width: 30ch;
+      overflow-wrap: break-word;
       &--name {
         font-family: $montse;
         font-weight: bold;
